vendor/thiserror-1.0.24/tests/ui/no-display.stderr
error[E0599]: the method `as_display` exists for reference `&NoDisplay`, but its trait bounds were not satisfied
 --> $DIR/no-display.rs:7:9
  |
4 | struct NoDisplay;
  | ----------------- doesn't satisfy `NoDisplay: std::fmt::Display`
...
7 | #[error("thread: {thread}")]
  |         ^^^^^^^^^^^^^^^^^^ method cannot be called on `&NoDisplay` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `NoDisplay: std::fmt::Display`
          which is required by `&NoDisplay: DisplayAsDisplay`
