vendor/thiserror-1.0.24/tests/ui/no-display.rs
use thiserror::Error;

#[derive(Debug)]
struct NoDisplay;

#[derive(Error, Debug)]
#[error("thread: {thread}")]
pub struct Error {
    thread: NoDisplay,
}

fn main() {}
